page/menu/all-menu/重複しているコードを省略した

--- a/styles/[id].module.scss
+++ b/styles/[id].module.scss
@@ -275,7 +275,7 @@
     .bottleMain,
     .cocktailMain {
       background-size: 100%;
-      background-position: center;
+      background-position: top;
       background-repeat: repeat-y;
 
       .box {
